# libabc

./: .gitignore  Makefile.am  README  README.md  autogen.sh  configure.ac  meson.build  test-libabc.c
libabc/: libabc-private.h  libabc.c  libabc.h  libabc.pc.in  libabc.sym  test-libabc.c
src/: libabc-private.h  libabc.c  libabc.sym  test-libabc.c
src/abc/: libabc.h
